# Clipo

./: .gitignore  Cargo.toml  LICENSE  README.md  app.rc  build.rs  dev.bat  pnpm-lock.yaml  pnpm-workspace.yaml
.cargo/: config.toml
assets/: tray-32.rgba
crates/clipo/: Cargo.toml  build.rs  tauri.conf.json
crates/clipo-capture/: Cargo.toml
crates/clipo-capture/src/: audio.rs  clipboard.rs  clock.rs  cursor.rs  encode.rs  engine.rs  ffmpeg.rs  lib.rs  ocr.rs  video.rs  video_thumb.rs  window_picker.rs
crates/clipo-core/: Cargo.toml
crates/clipo-core/src/: lib.rs
crates/clipo-overlay/: Cargo.toml
crates/clipo-overlay/src/: lib.rs
crates/clipo/capabilities/: default.json
crates/clipo/src/: lib.rs  main.rs  upload.rs
docs/screenshots/: README.md
installer/: README.md  build.ps1  clipo.nsi
lang/ar/LC_MESSAGES/: clipo.po
lang/de/LC_MESSAGES/: clipo.po
lang/es/LC_MESSAGES/: clipo.po
lang/fr/LC_MESSAGES/: clipo.po
lang/hi/LC_MESSAGES/: clipo.po
lang/it/LC_MESSAGES/: clipo.po
lang/ja/LC_MESSAGES/: clipo.po
lang/ko/LC_MESSAGES/: clipo.po
lang/pt/LC_MESSAGES/: clipo.po
lang/ru/LC_MESSAGES/: clipo.po
lang/zh/LC_MESSAGES/: clipo.po
scripts/: fetch-ffmpeg.ps1
src/: capture.rs  editor.rs  history.rs  hotkeys.rs  main.rs  ocr.rs  recording.rs  settings.rs  single_instance.rs  upload.rs  win.rs
tools/: coverage.cjs  gen-po.cjs
tools/gen-icon/: Cargo.toml
tools/gen-icon/src/: main.rs
ui/: app.slint  components.slint  index.html  package.json  theme.slint  tsconfig.json  vite.config.ts
ui/components/: clickable.slint  close-button.slint  drag-area.slint  dropdown.slint  history-thumb.slint  icon-button.slint  icon.slint  loader.slint  menu-card.slint  scroll-area.slint  scrollbar.slint  segmented.slint  setting-row.slint  settings-pane.slint  slider.slint  toggle.slint  upload-status.slint  window-controls.slint  window-shell.slint
ui/src/: App.svelte  app.css  main.ts
ui/src/lib/: StatusPage.svelte  dismissOffscreen.ts  theme.svelte.ts
ui/src/lib/actions/: CaptureActionsRow.svelte  PostCaptureActions.svelte  UploadToast.svelte  captureRegistry.ts
ui/src/lib/chrome/: WindowChrome.svelte
ui/src/lib/components/: Button.svelte  FontPicker.svelte  KeyCaptureInput.svelte  SegmentedControl.svelte  SizePicker.svelte  Slider.svelte  StatusMessage.svelte  Toggle.svelte  keyCombo.ts  outsideDismiss.ts
ui/src/lib/editor/: ColorPicker.svelte  EditorPage.svelte  StrokePicker.svelte
ui/src/lib/history/: HistoryPage.svelte  Lightbox.svelte
ui/src/lib/i18n/: ar.ts  de.ts  en.ts  es.ts  fr.ts  hi.ts  index.svelte.ts  it.ts  ja.ts  ko.ts  pt.ts  ru.ts  zh.ts
ui/src/lib/menu/: MenuPage.svelte
ui/src/lib/ocr/: OcrResultPage.svelte
ui/src/lib/quick/: QuickAccessPage.svelte
ui/src/lib/recording/: RecordingBarPage.svelte
ui/src/lib/settings/: SettingsPage.svelte
ui/src/lib/timer/: TimerPage.svelte
ui/src/lib/tray/: TrayMenuPage.svelte
ui/src/lib/window-picker/: WindowPickerPage.svelte
ui/windows/: actions.slint  countdown.slint  editor.slint  history.slint  menu.slint  ocr.slint  recording-bar.slint  settings.slint  traymenu.slint  viewer.slint  windowpicker.slint
