[package]
name = "clipo-capture"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
clipo-core.workspace = true
windows.workspace = true
windows-capture.workspace = true
tracing.workspace = true
thiserror.workspace = true
flume.workspace = true
image.workspace = true
parking_lot.workspace = true
serde.workspace = true
